@@ -1,0 +1,7 @@
+Eve-online related project. 
+Calcualtion different aspect of in-game manufacturing. 
+T1 pure cost calculation.
+T2 pure cost calculation with subcomponents.
+Moon matherial manufacturing pure cost calcualtion (full chain).
+
+(c) Dmitry Mishura
